@@ -1,4 +1,4 @@
-Copyright (c) 2001, Jason R. Mastaler <jason@mastaler.com>
+Copyright (c) 2002, Jason R. Mastaler <jason@mastaler.com>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
