@@ -1,3 +1,7 @@
+2002-01-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* COPYRIGHT: Update for 2002.
+
 2001-12-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* README: TMDA 0.43 is released.
